# restaurant_booking

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  profile.html  profile_edit.html  register.html
booking_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
booking_app/migrations/: 0001_initial.py  0002_booking_duration_hours.py
booking_app/templates/booking/: about.html  base.html  booking_form.html  confirm.html  home.html  table_detail.html
booking_app/templates/booking_app/: about.html  available_tables.html  book_table.html  booking.html  cancel_booking.html  contacts.html  edit_booking.html  error.html  home.html  login.html  profile.html  register.html
config/: settings.py  urls.py
